Revamp sponsors page

--- a/source/page/sponsors.html.md.erb
+++ b/source/page/sponsors.html.md.erb
@@ -8,7 +8,7 @@ Sponsors
 <div id="title-sponsors" class="sponsors">
   <div class="sponsor">
     <% link_to '//www.gatorade.com' do %>
-      <%= image_tag 'sponsors-gatorade.gif', class: 'img-responsive' %>
+      <%= image_tag 'sponsors-gatorade.png', class: 'img-responsive' %>
     <% end %>
   </div>
   <div class="sponsor">
@@ -48,7 +48,7 @@ Sponsors
   </div>
   <div class="sponsor">
     <% link_to '//d1sportstraining.com' do %>
-      <%= image_tag 'sponsors-d1.gif', class: 'img-responsive' %>
+      <%= image_tag 'sponsors-d1.png', class: 'img-responsive' %>
     <% end %>
   </div>
   <div class="sponsor">
