--- a/source/stylesheets/sponsors.scss
+++ b/source/stylesheets/sponsors.scss
@@ -9,12 +9,18 @@
     flex: 1 1 auto;
     text-align: center;
     padding: 8px;
-    width: 200px;
+    max-width: 200px;
+
+    img {
+      display: block;
+      margin: 0 auto;
+    }
   }
 }
 
 #title-sponsors {
   .sponsor {
+    max-width: 260px !important;
     width: 260px !important;
   }
 }
