Replace Gatorade logo

--- a/source/page/nutrition.html.md.erb
+++ b/source/page/nutrition.html.md.erb
@@ -6,7 +6,7 @@ Nutrition
 =========
 
 <div class="pull-left">
-  <%= image_tag 'sponsors-gatorade.gif', class: 'img-responsive' %>
+  <%= image_tag 'sponsors-gatorade.png', class: 'img-responsive' %>
 </div>
 
 To ensure that you're fully prepared to be successful during your time at camp,
