Add link to camper video on home page

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -26,6 +26,12 @@ title: "Official Home Page"
         </div>
 
         <div class="item">
+          <% link_to 'https://youtu.be/_ZsbBcv1_Bw' do %>
+            <%= image_tag 'carousel-2018-video.png', alt: '2018 MPA Camper Video' %>
+          <% end %>
+        </div>
+
+        <div class="item">
           <% link_to "https://parkerwaters.photoreflect.com/store/thumbpage.aspx?e=10265372&__s=XXXXXXXX" do %>
             <%= image_tag "carousel-photos.png", alt: "Camp Photos" %>
           <% end %>
