Fix typo on Nicholas Air link

--- a/source/page/sponsors.html.md.erb
+++ b/source/page/sponsors.html.md.erb
@@ -37,7 +37,7 @@ Sponsors
     <% end %>
   </div>
   <div class="sponsor">
-    <% link_to '//wwww.nicholasair.com' do %>
+    <% link_to '//www.nicholasair.com' do %>
       <%= image_tag 'sponsors-nicholas-air.png', class: 'img-responsive' %>
     <% end %>
   </div>
