--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -80,15 +80,15 @@ title: "Official Home Page"
     <%= link_to 'Sign Up Now!', online_registration_link,
       class: 'btn btn-lg btn-danger' %>
 
-    <!--
     <hr />
 
-    <h3>2018 Inaugural Women's &amp; Girl's Clinic &amp; Camp</h3>
+    <h3>2019 Ladies' Clinic</h3>
     <h4>
-      <%= "#{womens_clinic_start_date.strftime('%A, %B %-d')} - #{womens_clinic_end_date.strftime('%A, %B %-d, %Y')}".upcase %>
+      <%= "#{womens_clinic_date.strftime('%A, %B %-d, %Y')}" %>
     </h4>
     <a href="/page/womens-clinic" class="btn btn-default">Learn More</a>
 
+    <!--
     <div class="bg-danger">
       <h3 class="text-muted">Registration for the 2019 MPA will open soon.</h3>
     </div>
