--- a/source/page/womens-clinic.html.md.erb
+++ b/source/page/womens-clinic.html.md.erb
@@ -1,11 +1,11 @@
 ---
-title: "Inaugural Women's &amp; Girl's Clinic &amp; Camp"
+title: "2019 Ladies' Clinic"
 ---
 
-Inaugural Women's &amp; Girl's Clinic &amp; Camp
-================================================
+2019 Ladies' Clinic
+===================
 
-<%= "#{womens_clinic_start_date.strftime('%A, %B %-d')} - #{womens_clinic_end_date.strftime('%A, %B %-d, %Y')}" %>
+<%= "#{womens_clinic_date.strftime('%A, %B %-d, %Y')}" %>
 -----------------------------------------------------
 
 Purpose
@@ -23,5 +23,9 @@ Registration
 Printable Schedules
 -------------------
 
+  * _Coming soon_
+
+  <!--
   * [June 25 Clinic](/documents/womens-clinic-schedule.pdf)
   * [June 26 Interactive Camp](/documents/womens-camp-schedule.pdf)
+  -->
