Include links to social profiles

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -80,6 +80,35 @@ title: "Official Home Page"
     <%= link_to 'Sign Up Now!', online_registration_link,
       class: 'btn btn-lg btn-danger' %>
 
+    <div id="social-links">
+      <div class="social-link">
+        <a href="https://twitter.com/mpa_info">
+          <div class="social-logo">
+            <%= image_tag 'social-logo-twitter.png' %>
+          </div>
+          @mpa_info
+        </a>
+      </div>
+
+      <div class="social-link">
+        <a href="https://www.instagram.com/manningpassingacademy">
+          <div class="social-logo">
+            <%= image_tag 'social-logo-instagram.png' %>
+          </div>
+          @manningpassingacademy
+        </a>
+      </div>
+
+      <div class="social-link">
+        <a href="https://www.facebook.com/Manning-Passing-Academy-112664905447444/">
+          <div class="social-logo">
+            <%= image_tag 'social-logo-facebook.png' %>
+          </div>
+          manningpassingacademy
+        </a>
+      </div>
+    </div>
+
     <hr />
 
     <h3>2019 Ladies' Clinic</h3>
