--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -67,6 +67,34 @@ body {
     1px 1px 4px #fff;
 }
 
+#social-links {
+  margin: 20px auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.social-link {
+  width: 250px;
+  margin: 0 10px;
+
+  a, a:visited, a:active {
+    color: #fff;
+  }
+
+  .social-logo {
+    margin: 0 auto 4px;
+    width: 64px;
+    height: 64px;
+    border-radius: 2px;
+    background-color: #fff;
+
+    img {
+      padding: 3px;
+    }
+  }
+}
+
 #home-description {
   .col-md-4 {
     text-align: center;
