--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -81,32 +81,9 @@ title: "Official Home Page"
       class: 'btn btn-lg btn-danger' %>
 
     <div id="social-links">
-      <div class="social-link">
-        <a href="https://twitter.com/mpa_info">
-          <div class="social-logo">
-            <%= image_tag 'social-logo-twitter.png' %>
-          </div>
-          @mpa_info
-        </a>
-      </div>
-
-      <div class="social-link">
-        <a href="https://www.instagram.com/manningpassingacademy">
-          <div class="social-logo">
-            <%= image_tag 'social-logo-instagram.png' %>
-          </div>
-          @manningpassingacademy
-        </a>
-      </div>
-
-      <div class="social-link">
-        <a href="https://www.facebook.com/Manning-Passing-Academy-112664905447444/">
-          <div class="social-logo">
-            <%= image_tag 'social-logo-facebook.png' %>
-          </div>
-          manningpassingacademy
-        </a>
-      </div>
+      <%= partial 'partials/twitter_link' %>
+      <%= partial 'partials/instagram_link' %>
+      <%= partial 'partials/facebook_link' %>
     </div>
 
     <hr />
