Add social links to contact page

--- a/source/page/contact-us.html.md.erb
+++ b/source/page/contact-us.html.md.erb
@@ -17,4 +17,10 @@ Manning Passing Academy
 PO Box 10161  
 Eugene, OR 97440
 
+### Find us on social media
+
+<%= link_to image_tag('social-logo-twitter.png'), 'https://twitter.com/mpa_info' %>
+<%= link_to image_tag('social-logo-instagram.png'), 'https://www.instagram.com/manningpassingacademy' %>
+<%= link_to image_tag('social-logo-facebook.png'), 'https://www.facebook.com/Manning-Passing-Academy-112664905447444' %>
+
 <%= image_tag 'contact-us.jpg', class: 'img-responsive img-thumbnail' %>
