Update womens clinic itinerary

--- a/source/page/womens-clinic.html.md.erb
+++ b/source/page/womens-clinic.html.md.erb
@@ -23,9 +23,4 @@ Registration
 Printable Schedules
 -------------------
 
-  * _Coming soon_
-
-  <!--
-  * [June 25 Clinic](/documents/womens-clinic-schedule.pdf)
-  * [June 26 Interactive Camp](/documents/womens-camp-schedule.pdf)
-  -->
+  * [Tentative Itinerary](/documents/womens-camp-schedule.pdf)
