Remove paper application

--- a/source/page/application-registration.html.md.erb
+++ b/source/page/application-registration.html.md.erb
@@ -8,8 +8,12 @@ Registration / Application
 Registration for the 2019 MPA is Now Open
 -----------------------------------------
   * [Online Registration](<%= online_registration_link %>)
-  * [Printable Application](/documents/application.pdf)
   * [Camper Confirmation](<%= confirmation_link %>)
+  * <strike>Printable Application</strike> _Printable application no longer available._
+
+  <!--
+  ~~* [Printable Application](/documents/application.pdf)~~
+  -->
 
 <%= image_tag 'application-registration.jpg', class: 'img-responsive img-thumbnail' %>
 <script type="text/javascript">mixpanel.track("Registration visit");</script>
