Remove "Group" from rates

--- a/source/page/teams.html.md.erb
+++ b/source/page/teams.html.md.erb
@@ -2,7 +2,7 @@
 title: "Teams"
 ---
 
-Teams & Group Rates
+Team Rates
 ===================
 
 We welcome and encourage coaches who want to bring the offensive skill
