--- a/source/_team_rates.html.md.erb
+++ b/source/_team_rates.html.md.erb
@@ -2,7 +2,7 @@
 
   - 7-10 Overnight Campers: $725.00 ea. (Save $25.00 per camper)
   - 11-15 Overnight Campers: $700.00 ea. (Save $50.00 per camper)
-  - 16-Up Overnihgt Campers: $675.00 ea. (Save $75.00 per camper)
+  - 16-Up Overnight Campers: $675.00 ea. (Save $75.00 per camper)
 
 **Day camper team rates**:
 
