Update Greg bio

--- a/source/page/executive-staff.html.md.erb
+++ b/source/page/executive-staff.html.md.erb
@@ -345,13 +345,14 @@ the University of Oregon athletic department.
 Greg Blackwell - Director of Public Relations
 ---------------------------------------------
 
-Greg has been with the MPA since 1999 as the Director of Public Relations.
-He is currently the Director of THE TCU Lettermen's Association at Texas
-Christian University, after serving as the Director of Communications for the
-Allstate Sugar Bowl in New Orleans, LA from 1997 - 2007. A native of Burbank,
-CA, Greg served in the armed forces after high school as a Paratrooper in the
-82nd Airborne Division before moving on to college where he earned a bachelor's
-degree in Communications from Memphis State University.
+Greg has been with the MPA since 1998 as the Director of Public Relations. He is
+currently the Regional Marketing Director for Community National Title, a Texas
+based title insurance company. He previously was the Director of the TCU
+Lettermen's Association at Texas Christian University from 2007-19, after
+serving as the Director of Communications for the Allstate Sugar Bowl in New
+Orleans, LA from 1997- 2007. A native of Burbank, CA, Greg served in the Army as
+a Paratrooper in the 82nd Airborne Division before moving on to college where he
+earned a degree in Communications from Memphis State University.
 
 He and his wife Lydia reside in Fort Worth, Texas with their son Christian.
 
