--- a/source/page/executive-staff.html.md.erb
+++ b/source/page/executive-staff.html.md.erb
@@ -19,48 +19,48 @@ Passing Academy and makes all the audibles when it comes to teaching and
 coaching. Manning’s background is truly reflective of the ideals and dedication
 necessary to compete on the football field.
 
-At Ole Miss, where he is considered one of the greatest players ever to wear a
-Rebel uniform, he was the recipient of the Walter Camp Award and was selected to
-the All-American, All-SEC and All-South teams. As a professional Manning was the
-2nd player selected in the 1971 NFL draft, he went on to a brilliant 14 year
-career that included stints with the New Orleans Saints, Houston Oilers, and
-Minnesota Vikings. As the New Orleans Saints field general, Archie was named
-league MVP in `78 and was twice selected to the Pro Bowl.
+Currently Archie serves as Chairman of the National Football Foundation College
+Hall of Fame and is a member of the Mississippi Sports Hall of Fame committee
+and an active member of the Allstate Sugar Bowl championship committee.
+
+In the NFL, Archie was the 2nd player selected in the 1971 NFL draft and went on
+to a brilliant 14-year career that included stints with the New Orleans Saints,
+Houston Oilers, and Minnesota Vikings. As the New Orleans Saints field general,
+Archie was named league MVP in `78 and was twice selected to the Pro Bowl. He is
+a member of the New Orleans Saints Hall of Fame and its Ring of Honor.  As a
+college quarterback at Ole Miss, he is considered one of the greatest players
+ever to wear a Rebel uniform, he was the recipient of the Walter Camp Award and
+was selected to the All-American, All-SEC and All-South teams. Archie was the
+SEC Player of the Year in 1969. And in 1989, he was inducted into the College
+Football Hall of Fame. He is also an inductee in the Ole Miss, Sugar Bowl and
+Gator Bowl Hall of Fames.
 
 As a community leader, he has supported numerous non-profits and charities over
 the years in both Louisiana and Mississippi while continuing to assist those who
-share his love for the game of football. In 2013 he became the eighth recipient
-of the NFL's prestigious "Pat Summerall Award" given to an individual who has
-demonstrated through their career the character, integrity and leadership both
-on and off the field.
-
-Archie is Chairman of the National Football Foundation College Hall of Fame and
-a member of the Mississippi Sports Hall of Fame and serves as an active member
-of the Allstate Sugar Bowl championship committee.
-
-The former All-American quarterback at Mississippi was named as the recipient of
-the Davey O’Brien Legends Award which recognizes a QB who has made significant
-contributions to football, distinguished himself as an extraordinary leader and
-demonstrated exemplary conduct and reputation on and off the field. In October
-2013, he was selected to be one of the 13 inaugural members of the College
-Football Playoff Selection Committee.
-
-A portion of the Manning Passing Academy proceeds is donated to Special Olympics
-Louisiana, the Fellowship of Christian Athletes, and the Brain Tumor Research
-Center. Archie and Peyton have written a book entitled "Manning: A Father, His
-Sons and A Football Legacy," and also have a national quarterback award named
-after the family. The Manning Award, hosted by the Sugar Bowl Committee, in
-honor of Archie, Peyton and Eli is the only national quarterback award that
-considered the candidates post-season play.
-
-For almost four decades, the Manning family and the quarterback position have
-been practically synonymous with one another. As such, their summer vacations
-always revolve around the annual Manning Passing Academy, a family-owned and
-managed football camp that embraces the basic fundamentals of football while
-catering to the offensive skill positions of RB, TE, WR…and of course QB. Archie
-and his wife Olivia (a former Homecoming Queen at Ole Miss) reside in
-Orleans are the proud grandparents of seven grandchildren by Cooper, Peyton and
-Eli.
+share his love for the game of football.  He has been recognized across the
+nation for his character, integrity and leadership on and off the field.  This
+past year, Archie was recognized as the 2018 Walter Camp Football Foundation
+Distinguished American Award recipient, the Southeastern Conference Legend’s
+2018 Mike Slive Distinguished Service Award selection and awarded the National
+World War II Museum’s American Spirit Medallion; Past recipients of this award
+include former President George H.W. Bush, Tom Brokaw and Gen. Colin Powell.  He
+also received the prestigious Gold Medal Award (2016) from the National Football
+Foundation and College Hall of Fame, became the eighth recipient in 2013 of the
+NFL’s prestigious “Pat Summerall Award” and in 2004 honored as the recipient of
+the Davey O’Brien Legends Award.  A portion of the Manning Passing Academy
+proceeds is donated to Special Olympics Louisiana and Bridge House/Grace House
+New Orleans. Archie and Peyton have written a book entitled “Manning: A Father,
+His Sons and A Football Legacy” and also have a national quarterback award named
+after the family – the Manning Award, hosted by the Sugar Bowl Committee, in
+honor of Archie, Peyton and Eli.  This award is the only national quarterback
+award that considered the candidates post-season play.  For almost four decades,
+the Manning family and the quarterback position have been practically synonymous
+with one another. As such, their summer vacations always revolve around the
+annual Manning Passing Academy, a family-owned and managed football camp that
+embraces the basic fundamentals of football while catering to the offensive
+skill positions of RB, TE, WR…and of course QB.  Archie and his wife Olivia (a
+former Homecoming Queen at Ole Miss) reside in New Orleans are the proud
+grandparents of nine grandchildren by Cooper, Peyton and Eli.
 
 <div class="clearfix"></div> <hr />
 
