--- a/source/page/executive-staff.html.md.erb
+++ b/source/page/executive-staff.html.md.erb
@@ -192,42 +192,40 @@ of twins, Mosley and Marshal.
 Eli Manning - Senior Associate Director
 ---------------------------------------
 
-Following in his brother's footsteps, Eli was the first pick in the 2004 NFL
-Draft by the NY Giants. In the past 10 years, Eli has won two Super Bowls and
-earned two Super Bowl MVP honors.
+Entering his 16 th NFL season, Eli has been an iron man in the league since
+making his first start on Nov.  21, 2004, which began a streak of 210
+consecutive regular season games ranking him with the 3 rd longest streak by a
+quarterback in NFL History. As with the start of the 2019 season, Eli’s 230
+starts ranks him 3 rd among active quarterbacks.
 
-In 2012, Eli staked his claim among the elite passers in the NFL when he led the
-Giants to their second Super Bowl title in the last five years. Manning also won
-his second Super Bowl MVP award after completing 30-of-40 passes for 296 yards
-and a TD in Super Bowl XLVI. He is the first Giants quarterback to start two
-Super Bowl games.
+Following in his brother’s footsteps, Eli was a first draft pick (2004 Draft),
+played in multiple Super Bowl’s and was also selected as a Walter Payton NFL Man
+of the Year Award recipient.
 
-Manning will begin his 11th NFL season and has started the Giants’ last 151
-regular season games, the longest streak among active quarterbacks.  He is also
-the first Giants quarterback to throw for more than 3,000 yards in nine
-consecutive seasons, the first to have two 4,000-yard seasons as well as the
-first to throw at least 20 touchdown passes eight years in a row.
+Eli has won two Super Bowls and earned two Super Bowl MVP honors. In 2008, Eli
+led the Giants to victory in Super Bowl XLII and was named MVP (a year after
+Peyton won MVP). In 2012, Eli staked his claim among the premiere NFL passers
+when he led the Giants to their second Super Bowl title and also claimed his
+second Super Bowl MVP award in Super Bowl XLVI. He joins Phil Simms and Otis
+Anderson as the only Giants who have won the MVP award and the only Giants
+quarterback to win it twice.
 
-Manning was named MVP of Super Bowl XLII (the year after Peyton was named MVP)
-joining Phil Simms and Otis Anderson as the only Giants who have won the award
-and the only Giants quarterback to win it twice. Manning played in his first Pro
-Bowl following the ‘08 season. Overall, his record as a starting QB is 78-57
-(.577) in the regular season and 8-3 (.727) in the postseason.
+He is also the Giant’s all-time leading passer and owns six all-time Giants
+passing records. He is the first Giants quarterback to throw for more than 3,000
+yards in 14 consecutive seasons, the first to have seven 4,000-yard seasons and
+the first to throw at least 20 touchdown passes 8 years in a row. He also tossed
+20 or more touchdowns in 13 seasons as a starter.
 
-Manning's 151 consecutive starts is a Giants record and the third-best mark
-all-time by an NFL quarterback. It is the longest current streak in the league. 
-In each of his 10 years as the full-time starter, Manning has thrown for at
-least 3,000 yards while also tossing at least 20 touchdowns in nine of the last
-10 seasons. In 2011, he threw for a career-high 4,933 yards. After the 2012
-season he was named to his third Pro Bowl and threw two TD’s in the 62-35 win
-over the AFC.
+Manning has thrown for at least 3,000 yards as a starter in 14 of the past 15
+seasons. In 2011, he threw for a career-high 4,933 yards. Manning has
+participated in four pro bowls during his career
 
 At Ole Miss, Eli set or tied 45 single game, season, and career records.
 
 In his senior year, Eli led the Rebels to a 10-3 record and a 31-28 SBC Cotton
-Bowl victory over the Oklahoma State Cowboys in 2003, won the Maxwell Award,
-given to the nation’s top collegiate player, the Johnny Unitas Golden Arm Award,
-given to the nation’s top senior quarterback and The Walter Camp Foundation
+Bowl victory over the Oklahoma State Cowboys in 2003; won the Maxwell Award,
+given to the nation’s top collegiate player; the Johnny Unitas Golden Arm Award,
+given to the nation’s top senior quarterback; and the Walter Camp Foundation
 Player of the Year Award.
 
 Eli was the SEC Player of the Year and earned the Conerly Trophy as the top
@@ -239,14 +237,15 @@ baby formula, diapers, and pillows to the people of New Orleans.
 
 He championed the construction of “The Eli Manning Children’s Clinics” at the UM
 Hospital for Children raising $2.5 million and for the past six years has hosted
-the “Guiding Eyes for the Blind’s Golf Classic, the oldest and largest charity
-event in Westchester County, NY.
+the “Guiding Eyes For The Blind Golf Classic”, the oldest and largest charity
+event in Westchester County, NY. He has also been chairman of the annual Walk
+for Babies, a flagship event for the March of Dimes.
 
 Born and raised in New Orleans, Louisiana, he attended Newman High School and
 was an All-American, All-State and All-District pick at QB.
 
-Eli and his wife Abby reside in Hoboken, New Jersey and are the proud parents of
-daughters Ava and Lucy.
+Eli and his wife Abby are the proud parents of three daughter’s Ava, Lucy, and
+Caroline and one son, Charles “Charlie” Elisha.
 
 <div class="clearfix"></div> <hr />
 
