Update womens clinic to free event with flyer

--- a/source/page/womens-clinic.html.md.erb
+++ b/source/page/womens-clinic.html.md.erb
@@ -8,19 +8,7 @@ title: "2019 Ladies' Clinic"
 <%= "#{womens_clinic_date.strftime('%A, %B %-d, %Y')}" %>
 -----------------------------------------------------
 
-Purpose
--------
+# [Official Clinic Flyer](/documents/womens-clinic-flyer.pdf)
 
-_More information coming soon..._
+[Confirmation Page](<%= womens_clinic_confirmation_link %>)
 
-Registration
-------------
-
-  * [Online Registration](<%= womens_clinic_online_registration_link %>)
-  * [Printable Application](/documents/womens-application.pdf)
-  * [Confirmation Page](<%= womens_clinic_confirmation_link %>)
-
-Printable Schedules
--------------------
-
-  * [Tentative Itinerary](/documents/womens-camp-schedule.pdf)
