Update womens clinic registration form

--- a/source/page/womens-clinic.html.md.erb
+++ b/source/page/womens-clinic.html.md.erb
@@ -10,5 +10,6 @@ title: "2019 Ladies' Clinic"
 
 # [Official Clinic Flyer](/documents/womens-clinic-flyer.pdf)
 
-[Confirmation Page](<%= womens_clinic_confirmation_link %>)
+* [Printable Registration Form](/documents/womens-application.pdf)
+* [Confirmation Page](<%= womens_clinic_confirmation_link %>)
 
