--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -14,8 +14,8 @@ title: "Official Home Page"
 
       <div class="carousel-inner">
         <div class="item active">
-          <% link_to 'documents/brochure.pdf' do %>
-            <%= image_tag 'carousel-2019-brochure.png', alt: '2019 Brochure and Counselors' %>
+          <% link_to 'https://parkerwaters.photoreflect.com/store/thumbpage.aspx?e=10446420' do %>
+            <%= image_tag 'carousel-photos.png', alt: '2019 Photos' %>
           <% end %>
         </div>
 
@@ -52,13 +52,13 @@ title: "Official Home Page"
         <!--
 
         <div class="item">
-          <%= image_tag "carousel-registration-closed.png", alt: "Registration is closed" %>
+          <% link_to 'documents/brochure.pdf' do %>
+            <%= image_tag 'carousel-2019-brochure.png', alt: '2019 Brochure and Counselors' %>
+          <% end %>
         </div>
 
         <div class="item">
-          <% link_to "https://s3.amazonaws.com/manning-passing-academy/2018PocketBook.pdf" do %>
-            <%= image_tag 'carousel-reminders.png', alt: 'Pre-Camp Reminders' %>
-          <% end %>
+          <%= image_tag "carousel-registration-closed.png", alt: "Registration is closed" %>
         </div>
 
         -->
