Update registration opening date and 25th anniversary

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -94,11 +94,9 @@ title: "Official Home Page"
 
     <hr />
 
-    <!--
     <div class="bg-danger">
-      <h3 class="text-muted">Registration for the 2019 MPA will open soon.</h3>
+      <h3 class="text-muted">Registration for the 2020 MPA will open on August 15.</h3>
     </div>
-    -->
 
   </div>
 </div>
@@ -106,7 +104,7 @@ title: "Official Home Page"
 <div id="home-description" class="container">
   <div class="row">
     <div class="col-md-4">
-      <h4>24th Anniversary</h4>
+      <h4>25th Anniversary</h4>
       <%= image_tag 'home-description-cooper-archie.png' %>
       <p>
         For over 20 years, the Manning Passing Academy has been helping players
