Update pages to indicate registration opening soon

--- a/source/page/application-registration.html.md.erb
+++ b/source/page/application-registration.html.md.erb
@@ -5,14 +5,12 @@ title: "Application Registration"
 Registration / Application
 ==========================
 
-Registration for the 2019 MPA is Now Open
------------------------------------------
-  * [Online Registration](<%= online_registration_link %>)
-  * [Camper Confirmation](<%= confirmation_link %>)
-  * <strike>Printable Application</strike> _Printable application no longer available._
+## Registration for the 2020 MPA will open on August 15.
 
   <!--
-  ~~* [Printable Application](/documents/application.pdf)~~
+  * [Online Registration](<%= online_registration_link %>)
+  * [Camper Confirmation](<%= confirmation_link %>)
+  * [Printable Application](/documents/application.pdf)
   -->
 
 <%= image_tag 'application-registration.jpg', class: 'img-responsive img-thumbnail' %>
