--- a/source/page/application-registration.html.md.erb
+++ b/source/page/application-registration.html.md.erb
@@ -5,13 +5,11 @@ title: "Application Registration"
 Registration / Application
 ==========================
 
-## Registration for the 2020 MPA will open on August 15.
+## Registration for the 2020 MPA is now open.
 
-  <!--
   * [Online Registration](<%= online_registration_link %>)
   * [Camper Confirmation](<%= confirmation_link %>)
   * [Printable Application](/documents/application.pdf)
-  -->
 
 <%= image_tag 'application-registration.jpg', class: 'img-responsive img-thumbnail' %>
 <script type="text/javascript">mixpanel.track("Registration visit");</script>
