Update years in existance

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -63,7 +63,7 @@ title: "Official Home Page"
       <h4>25th Anniversary</h4>
       <%= image_tag 'home-description-cooper-archie.png' %>
       <p>
-        For over 20 years, the Manning Passing Academy has been helping players
+        For 25 years, the Manning Passing Academy has been helping players
         fully realize their potential on and off of the football field.
       </p>
     </div>
