Change daily schedule link

--- a/source/page/daily-schedule.html.md.erb
+++ b/source/page/daily-schedule.html.md.erb
@@ -5,6 +5,6 @@ title: "Daily Schedule"
 Daily Schedule
 ==============
 
-* Daily schedule in [brochure](/documents/brochure.pdf)
+* Tentative [printable daily schedule](/documents/daily-schedule.pdf)
 
 <%= image_tag 'daily-schedule.jpg', class: 'img-responsive img-thumbnail' %>
