--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -7,10 +7,18 @@ title: "Official Home Page"
     <div id="mpa-carousel" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#mpa-carousel" data-slide-to="0" class="active"></li>
+        <li data-target="#mpa-carousel" data-slide-to="1"></li>
       </ol>
 
       <div class="carousel-inner">
+
         <div class="item active">
+          <% link_to online_registration_link do %>
+            <%= image_tag 'carousel-registration-open.png', alt: '2020 Registration Open' %>
+          <% end %>
+        </div>
+
+        <div class="item">
           <% link_to 'https://parkerwaters.photoreflect.com/store/thumbpage.aspx?e=10446420' do %>
             <%= image_tag 'carousel-photos.png', alt: '2019 Photos' %>
           <% end %>
